@@ -1,6 +1,11 @@
 PostGIS 3.1.13dev
 YYYY/MM/DD
 
+* Bug Fixes *
+
+ - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
+
+
 PostGIS 3.1.12
 2024/12/23
 
